<resources>
    <string name="app_name">CS119.3 Lab</string>
    <string name="login">LOGIN</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="rememberMe">Remember Me</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="confirmNewUser">OK</string>
    <string name="clear">Clear</string>
    <string name="bday">Birthday:</string>
</resources>
